objects/pse__Revenue_Forecast_Batch_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Deprecated:Stores the settings used by batch Apex jobs for revenue forecasts.</description>
    <fields>
        <fullName>pse__Notifications_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from revenue forecast batch processes are sent via Chatter to recipients listed in the Notification Recipients setting.</description>
        <inlineHelpText>If selected, notifications from revenue forecast batch processes are sent via Chatter to recipients listed in the Notification Recipients setting.</inlineHelpText>
        <label>Deprecated:Notifications by Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from revenue forecast batch processes are sent via email to recipients listed in the Notification Recipients setting.</description>
        <inlineHelpText>If selected, notifications from revenue forecast batch processes are sent via email to recipients listed in the Notification Recipients setting.</inlineHelpText>
        <label>Deprecated:Notifications by Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Recipients__c</fullName>
        <description>Specifies the notification recipients for revenue forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;).</description>
        <inlineHelpText>Specifies the notification recipients for revenue forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;).</inlineHelpText>
        <label>Deprecated:Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from revenue forecast batch processes are sent via tasks.</description>
        <inlineHelpText>If selected, notifications from revenue forecast batch processes are sent via tasks.</inlineHelpText>
        <label>Deprecated:Notifications by Task</label>
        <type>Checkbox</type>
    </fields>
    <label>Deprecated:Revenue ForecastBatchSettings</label>
</CustomObject>